css/style.css
/* ... */
#wrapper p.change_link a:hover {
	color: rgb(57, 191, 215);
	background: rgb(247, 247, 247);
	border: 1px solid rgb(74, 179, 198);
}
#wrapper p.change_link a:active{
	position: relative;
	top: 1px;
}
/** Styling both forms **/
#register, 
#login{
	position: absolute;
	top: 0px;
	width: 88%;	
	padding: 18px 6% 60px 6%;
	margin: 0 0 35px 0;
	background: rgb(247, 247, 247);
	border: 1px solid rgba(147, 184, 189,0.8);
	-webkit-box-shadow: 0pt 2px 5px rgba(105, 108, 109,  0.7),	0px 0px 8px 5px rgba(208, 223, 226, 0.4) inset;
	   -moz-box-shadow: 0pt 2px 5px rgba(105, 108, 109,  0.7),	0px 0px 8px 5px rgba(208, 223, 226, 0.4) inset;
	        box-shadow: 0pt 2px 5px rgba(105, 108, 109,  0.7),	0px 0px 8px 5px rgba(208, 223, 226, 0.4) inset;
	-webkit-box-shadow: 5px;
	-moz-border-radius: 5px;
		 border-radius: 5px;
}
#register{	
	z-index: 21;
	opacity: 0;
}
#login{
	z-index: 22;
}
#toregister:target ~ #wrapper #register,
#tologin:target ~ #wrapper #login{
	z-index: 22;
	-webkit-animation-delay: .6s;
	-webkit-animation-timing-function: ease-in;
	-moz-animation-delay: .6s;
	-moz-animation-timing-function: ease-in;
	-o-animation-delay: .6s;
	-o-animation-timing-function: ease-in;
	-ms-animation-delay: .6s;
	-ms-animation-timing-function: ease-in;
	animation-delay: .6s;
	animation-timing-function: ease-in;
	-webkit-animation-name: scaleIn;
	-moz-animation-name: scaleIn;
	-ms-animation-name: scaleIn;
	-o-animation-name: scaleIn;
	animation-name: scaleIn;
}
#toregister:target ~ #wrapper #login,
#tologin:target ~ #wrapper #register{
	-webkit-animation-timing-function: ease-out;
	-moz-animation-timing-function: ease-out;
	-o-animation-timing-function: ease-out;
	-ms-animation-timing-function: ease-out;
	animation-timing-function: ease-out;
	-webkit-animation-name: scaleOut;
	-moz-animation-name: scaleOut;
	-ms-animation-name: scaleOut;
	-o-animation-name: scaleOut;
	animation-name: scaleOut;
}

/** the actual animation, credit where due : http://daneden.me/animate/ ***/
.animate{
	-webkit-animation-duration: 0.5s;
	-webkit-animation-fill-mode: both;
	
	-moz-animation-duration: 0.5s;
	-moz-animation-fill-mode: both;
	
	-o-animation-duration: 0.5s;
	-o-animation-fill-mode: both;
	
	-ms-animation-duration: 0.5s;
	-ms-animation-fill-mode: both;
	
	animation-duration: 0.5s;
	animation-fill-mode: both;
}

/** yerk some ugly IE fixes 'cause I know someone will ask "why does it look ugly in IE?", no matter how many warnings I will put in the article */

.lt8 #wrapper input{
	padding: 10px 5px 10px 32px;
    width: 92%;
}
.lt8 #wrapper input[type=checkbox]{
	width: 10px;
	padding: 0;
}
.lt8 #wrapper h1{
	color: #066A75;
}
.lt8 #register{	
	display: none;
}
.lt8 p.change_link,
.ie9 p.change_link{
	position: absolute;
	height: 90px;
	background: transparent;
}



/** my changes**/ 

.btn-link {
    color: #08c;
    cursor: pointer;
    border-color: transparent;
    -webkit-border-radius: 0;
    -moz-border-radius: 0;
    border-radius: 0;
    color: #fff;
    text-shadow: 0 -1px 0 rgba(0,0,0,0.25);
    background-color: #006dcc;
    background-image: -webkit-gradient(linear,0 0,0 100%,from(#08c),to(#04c));
    background-image: -webkit-linear-gradient(top,#08c,#04c);
    background-image: -o-linear-gradient(top,#08c,#04c);
    background-image: linear-gradient(to bottom,#08c,#04c);
    background-image: -moz-linear-gradient(top,#08c,#04c);
    background-repeat: repeat-x;
    border-color: #04c #04c #002a80;
    border-color: rgba(0,0,0,0.1) rgba(0,0,0,0.1) rgba(0,0,0,0.25);
    filter: progid:dximagetransform.microsoft.gradient(startColorstr='#ff0088cc',endColorstr='#ff0044cc',GradientType=0);
    filter: progid:dximagetransform.mi
}


form{

    padding-top: 40px;

}

input
   {
   display: inline-block;
    height: 20px;
    padding: 5px 68px;
    margin-bottom: 9px;
    font-size: 14px;
    line-height: 20px;
    color: #555;
    -webkit-border-radius: 3px;
    -moz-border-radius: 3px;
    border-radius: 3px;
}


h1{
	font-size: 50px;
    color: white;
    margin-top: 54px;
}



p{
   color: white;
    font-size: 18px;
    
}



#yummy h1{
	font-size: 64px;
	border: solid;
    border-color: rgb(61, 157, 179);
    margin-left: 420px;
    margin-right: 420px;
    padding-top: 10px;
    padding-bottom: 10px;
    color: #006dcc;
}

